mco/mcs.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: machine-config-server1
  name: machine-config-server1
  namespace: openshift-machine-config-operator
spec:
  port:
    targetPort: https
  subdomain: ""
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: machine-config-server1
    weight: 100
  wildcardPolicy: None
